--- a/Featherline.csproj
+++ b/Featherline.csproj
@@ -9,6 +9,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>Assets/feather.ico</ApplicationIcon>
+    <ApplicationManifest>UI/app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,9 +17,24 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Remove="UI\**" />
-    <Compile Remove="UI\**" />
-    <EmbeddedResource Remove="UI\**" />
-    <None Remove="UI\**" />
+    <None Remove=".gitignore" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TrimmerRootDescriptor Include="UI/Roots.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Avalonia" Version="0.10.18" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.10.18" />
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.18" />
+    <PackageReference Include="XamlNameReferenceGenerator" Version="1.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="UIo\**" />
+    <Compile Remove="UIo\**" />
+    <EmbeddedResource Remove="UIo\**" />
+    <None Remove="UIo\**" />
   </ItemGroup>
 </Project>
