--- a/Featherline.csproj
+++ b/Featherline.csproj
@@ -11,7 +11,7 @@
     <SelfContained>true</SelfContained>
     <RuntimeIdentifier>$(RID)</RuntimeIdentifier>
     <PublishSingleFile>True</PublishSingleFile>
-    <PublishTrimmed>True</PublishTrimmed>
+    <PublishTrimmed>False</PublishTrimmed>
     <TrimMode>CopyUsed</TrimMode>
     <EnableCompressionInSingleFile>True</EnableCompressionInSingleFile>
   </PropertyGroup>
